--- a/WPF-Game-Tic-Tac-Toe/Windows/TicTacToeBig.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/TicTacToeBig.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WPF_Game_Tic_Tac_Toe.MainWindow"
+﻿<Window x:Class="WPF_Game_Tic_Tac_Toe.Windows.TicTacToeBig"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_Game_Tic_Tac_Toe"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:WPF_Game_Tic_Tac_Toe.Windows"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TicTacToeBig" Height="450" Width="800">
     <Grid>
-
+        
     </Grid>
 </Window>
