--- a/WPF-Game-Tic-Tac-Toe/Windows/DescriptionWindow.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/DescriptionWindow.xaml
@@ -6,7 +6,52 @@
         xmlns:local="clr-namespace:WPF_Game_Tic_Tac_Toe.Windows"
         mc:Ignorable="d"
         Title="DescriptionWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Top"></Setter>
+            <Setter Property="FontSize" Value="16"></Setter>
+            <Setter Property="Margin" Value="0 10 0 0"></Setter>
+            <Setter Property="TextWrapping" Value="Wrap"></Setter>
+            <Setter Property="TextAlignment" Value="Center"></Setter>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="VerticalAlignment" Value="Bottom"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="Width" Value="100"></Setter>
+            <Setter Property="Height" Value="100"></Setter>
+            <Setter Property="Margin" Value="0 0 0 20"></Setter>
+            <Setter Property="FontSize" Value="25"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0">
+            <TextBlock FontSize="25">Tic Tac Toe (3x3)</TextBlock>
+            <TextBlock>
+                Square field with cells 3 by 3
+            </TextBlock>
+            <TextBlock>
+                You will walk in turn, the cross starts first, and so on until: One of the players collects three zeros 
+                or three crosses diagonally or in a row, after which the winner will be known. Or until there are no free cells left.
+            </TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Column="2">
+            <TextBlock FontSize="25">Tic Tac Toe (15x15)</TextBlock>
+            <TextBlock>
+                Tic Tac Toe: 5 in a Row on the Big Field is a great game based on the classic version of 
+                Tic Tac Toe, only here we have a large playing field measuring 15 by 15.
+            </TextBlock>
+            <TextBlock>
+                To win this game, you need to make a whole row of 5 crosses or zeroes, while the row can be
+                either vertical, or horizontal or diagonal. Both players take turns and place their icon in any of 
+                the free cells.
+            </TextBlock>
+        </StackPanel>
+        <Button Grid.Column="1" Click="Button_CloseWindow">Close</Button>
     </Grid>
 </Window>
