--- a/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
@@ -38,7 +38,7 @@
             <Button FontSize="22" Click="Button_ShowChangeNick">Change NickName</Button>
             <Button FontSize="27">Tic Tak Toe (3x3)</Button>
             <Button FontSize="22">Tic Tak Toe (15x15)</Button>
-            <Button>Description</Button>
+            <Button Click="Button_ShowDescription">Description</Button>
         </StackPanel>
         <StackPanel HorizontalAlignment="Center">
             <TextBlock Style="{StaticResource Header}">WELCOME</TextBlock>
