add mode tic-tac-toe 3x3;

--- a/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
@@ -36,7 +36,7 @@
     <Grid>
         <StackPanel>
             <Button FontSize="22" Click="Button_ShowChangeNick">Change NickName</Button>
-            <Button FontSize="27">Tic Tak Toe (3x3)</Button>
+            <Button FontSize="27" Click="Button_OpenClassicTicTacToe">Tic Tak Toe (3x3)</Button>
             <Button FontSize="22">Tic Tak Toe (15x15)</Button>
             <Button Click="Button_ShowDescription">Description</Button>
         </StackPanel>
