--- a/WPF-Game-Tic-Tac-Toe/Windows/TicTacToeBig.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/TicTacToeBig.xaml
@@ -5,8 +5,76 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:WPF_Game_Tic_Tac_Toe.Windows"
         mc:Ignorable="d"
-        Title="TicTacToeBig" Height="450" Width="800">
-    <Grid>
-        
+        Title="TicTacToeBig" Height="550" Width="800">
+    <Window.Resources>
+        <Style x:Key="Button" TargetType="Button">
+            <Setter Property="Margin" Value="0 10 0 0"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Top"></Setter>
+            <Setter Property="FontSize" Value="30"></Setter>
+            <Setter Property="Width" Value="100"></Setter>
+            <Setter Property="Height" Value="50"></Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="TextAlignment" Value="Center"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Top"></Setter>
+            <Setter Property="FontSize" Value="16"></Setter>
+        </Style>
+        <Style x:Key="Header" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="LightSalmon"></Setter>
+            <Setter Property="FontSize" Value="25"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Top"></Setter>
+            <Setter Property="Margin" Value="10"></Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Name="Grid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="5*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0" Grid.Column="15" Grid.RowSpan="15">
+            <Button Style="{StaticResource Button}" Click="Button_OpenMainWindow">Back</Button>
+            <Button Style="{StaticResource Button}" Click="RestartGame">Restart</Button>
+            <TextBlock Style="{StaticResource Header}">Nicknames:</TextBlock>
+            <TextBlock x:Name="NicknamesPlayers" Margin="0"></TextBlock>
+            <TextBlock Style="{StaticResource Header}">Now walking:</TextBlock>
+            <TextBlock x:Name="NowWalking" Margin="0"></TextBlock>
+            <TextBlock Style="{StaticResource Header}">Statistics:</TextBlock>
+            <TextBlock x:Name="Statistics" Margin="0"></TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
