--- a/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
+++ b/WPF-Game-Tic-Tac-Toe/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPF_Game_Tic_Tac_Toe.MainWindow"
+﻿<Window x:Class="WPF_Game_Tic_Tac_Toe.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
